--- a/index.html
+++ b/index.html
@@ -356,9 +356,136 @@ pre code {
 </div>
 
 
-<div id="lorum-ipsum" class="section level2">
-<h2>Lorum Ipsum</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce finibus erat ac bibendum posuere. Proin nec semper erat, id suscipit tortor. Nam posuere rhoncus sem. Sed ultricies lorem id quam efficitur, auctor interdum arcu molestie. Integer justo sapien, suscipit id sagittis quis, dapibus vitae ipsum. Mauris tincidunt iaculis ligula, id lobortis diam feugiat a. Nam arcu lectus, tempus nec nisi id, feugiat ultrices est. Ut facilisis aliquet aliquam. Suspendisse a ultricies mauris. Etiam auctor commodo arcu, ut pharetra arcu auctor at. Fusce id condimentum mauris, interdum mattis lacus. Sed elit mi, iaculis sit amet tortor nec, vestibulum auctor leo. Pellentesque eu erat vel eros dapibus posuere. Etiam id est efficitur, congue dui ut, euismod ex. Vestibulum elit purus, tempor at posuere in, mollis ut lacus. In quis justo lacus.</p>
+<div id="executive-summary" class="section level2">
+<h2>Executive Summary</h2>
+<p>In this project, my goal will be to use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants using devices such as Jawbone Up, Nike FuelBand, and Fitbit to quantify how well the subjects are exercising. I will be using data from here <a href="http://web.archive.org/web/20161224072740/http:/groupware.les.inf.puc-rio.br/har" class="uri">http://web.archive.org/web/20161224072740/http:/groupware.les.inf.puc-rio.br/har</a></p>
+</div>
+<div id="loading-data" class="section level2">
+<h2>Loading Data</h2>
+<p>First I will load necessary R libraries that I will need to complete my analysis.</p>
+<pre class="r"><code>library(dplyr)
+library(caret)
+library(lubridate)</code></pre>
+<p>Now I will download the data, load it into R and clean the data for analysis. I will import the testing set as “validation” as I will split the training data further for later validation.</p>
+<pre class="r"><code>training_file_url &lt;- &quot;https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv&quot;
+testing_file_url &lt;- &quot;https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv&quot;
+download.file(training_file_url, &quot;training_test.csv&quot;, method = &quot;curl&quot;)
+download.file(testing_file_url, &quot;validation.csv&quot;, method = &quot;curl&quot;)
+training_test &lt;- read.csv(file.path(getwd(), &quot;training_test.csv&quot;), row.names = 1, stringsAsFactors = FALSE)
+validation &lt;- read.csv(file.path(getwd(), &quot;validation.csv&quot;), row.names = 1, stringsAsFactors = FALSE)</code></pre>
+</div>
+<div id="clean-data" class="section level2">
+<h2>Clean Data</h2>
+<p>Now that we have the data loaded in, let’s explore the data using a few different R commands such as str(testing), str(training) - I haven’t included the output here as there are 159 columns as we can see here from the dim command.</p>
+<pre class="r"><code>dim(training_test)</code></pre>
+<pre><code>## [1] 19622   159</code></pre>
+<p>Let’s go ahead and clean up some of these variables.</p>
+<pre class="r"><code>## get columns with no data in validation set
+rows_with_data &lt;- !as.vector(sapply(validation, function(x)all(is.na(x))))
+## drop columns without data in validation set
+training_test &lt;- training_test[,rows_with_data]
+validation &lt;- validation[,rows_with_data]
+## convert dates to date format
+training_test$cvtd_timestamp &lt;- dmy_hm(training_test$cvtd_timestamp)
+validation$cvtd_timestamp &lt;- dmy_hm(validation$cvtd_timestamp)
+## convert char col to factor
+training_test$new_window &lt;- factor(training_test$new_window)
+validation$new_window &lt;- factor(validation$new_window)
+training_test$new_window &lt;- factor(training_test$new_window)
+validation$new_window &lt;- factor(validation$new_window)
+training_test$classe &lt;- factor(training_test$classe)
+training_test$user_name &lt;- factor(training_test$user_name)
+validation$user_name &lt;- factor(validation$user_name)
+## remove raw time stamp (drop columns)
+training_test &lt;- training_test %&gt;%
+  select(-c(2,3))
+validation &lt;- validation %&gt;%
+  select(-c(2,3))</code></pre>
+<p>Let’s check for NAs now that we have cleaned up our data</p>
+<pre class="r"><code>colSums(is.na(training_test))</code></pre>
+<pre><code>##            user_name       cvtd_timestamp           new_window 
+##                    0                    0                    0 
+##           num_window            roll_belt           pitch_belt 
+##                    0                    0                    0 
+##             yaw_belt     total_accel_belt         gyros_belt_x 
+##                    0                    0                    0 
+##         gyros_belt_y         gyros_belt_z         accel_belt_x 
+##                    0                    0                    0 
+##         accel_belt_y         accel_belt_z        magnet_belt_x 
+##                    0                    0                    0 
+##        magnet_belt_y        magnet_belt_z             roll_arm 
+##                    0                    0                    0 
+##            pitch_arm              yaw_arm      total_accel_arm 
+##                    0                    0                    0 
+##          gyros_arm_x          gyros_arm_y          gyros_arm_z 
+##                    0                    0                    0 
+##          accel_arm_x          accel_arm_y          accel_arm_z 
+##                    0                    0                    0 
+##         magnet_arm_x         magnet_arm_y         magnet_arm_z 
+##                    0                    0                    0 
+##        roll_dumbbell       pitch_dumbbell         yaw_dumbbell 
+##                    0                    0                    0 
+## total_accel_dumbbell     gyros_dumbbell_x     gyros_dumbbell_y 
+##                    0                    0                    0 
+##     gyros_dumbbell_z     accel_dumbbell_x     accel_dumbbell_y 
+##                    0                    0                    0 
+##     accel_dumbbell_z    magnet_dumbbell_x    magnet_dumbbell_y 
+##                    0                    0                    0 
+##    magnet_dumbbell_z         roll_forearm        pitch_forearm 
+##                    0                    0                    0 
+##          yaw_forearm  total_accel_forearm      gyros_forearm_x 
+##                    0                    0                    0 
+##      gyros_forearm_y      gyros_forearm_z      accel_forearm_x 
+##                    0                    0                    0 
+##      accel_forearm_y      accel_forearm_z     magnet_forearm_x 
+##                    0                    0                    0 
+##     magnet_forearm_y     magnet_forearm_z               classe 
+##                    0                    0                    0</code></pre>
+<pre class="r"><code>colSums(is.na(validation))</code></pre>
+<pre><code>##            user_name       cvtd_timestamp           new_window 
+##                    0                    0                    0 
+##           num_window            roll_belt           pitch_belt 
+##                    0                    0                    0 
+##             yaw_belt     total_accel_belt         gyros_belt_x 
+##                    0                    0                    0 
+##         gyros_belt_y         gyros_belt_z         accel_belt_x 
+##                    0                    0                    0 
+##         accel_belt_y         accel_belt_z        magnet_belt_x 
+##                    0                    0                    0 
+##        magnet_belt_y        magnet_belt_z             roll_arm 
+##                    0                    0                    0 
+##            pitch_arm              yaw_arm      total_accel_arm 
+##                    0                    0                    0 
+##          gyros_arm_x          gyros_arm_y          gyros_arm_z 
+##                    0                    0                    0 
+##          accel_arm_x          accel_arm_y          accel_arm_z 
+##                    0                    0                    0 
+##         magnet_arm_x         magnet_arm_y         magnet_arm_z 
+##                    0                    0                    0 
+##        roll_dumbbell       pitch_dumbbell         yaw_dumbbell 
+##                    0                    0                    0 
+## total_accel_dumbbell     gyros_dumbbell_x     gyros_dumbbell_y 
+##                    0                    0                    0 
+##     gyros_dumbbell_z     accel_dumbbell_x     accel_dumbbell_y 
+##                    0                    0                    0 
+##     accel_dumbbell_z    magnet_dumbbell_x    magnet_dumbbell_y 
+##                    0                    0                    0 
+##    magnet_dumbbell_z         roll_forearm        pitch_forearm 
+##                    0                    0                    0 
+##          yaw_forearm  total_accel_forearm      gyros_forearm_x 
+##                    0                    0                    0 
+##      gyros_forearm_y      gyros_forearm_z      accel_forearm_x 
+##                    0                    0                    0 
+##      accel_forearm_y      accel_forearm_z     magnet_forearm_x 
+##                    0                    0                    0 
+##     magnet_forearm_y     magnet_forearm_z           problem_id 
+##                    0                    0                    0</code></pre>
+<p>We can see that there are no more columns since we removed the columns that we do not have in the final test set.</p>
+</div>
+<div id="explore-data" class="section level2">
+<h2>Explore Data</h2>
+<p>Now that we have a clean set of data, let’s split up our data as follows:</p>
+<p>training_test (originally training data) will be split 70/30 into training and test data. validaiton (originally test data) will be left seperate and we will use part of the original training set as test data instead so that we will only need to use the validation set once at the end.</p>
 </div>
 
 
